[package]
name = "vlfx"
version = "0.1.0"
authors = ["Álex Román Núñez <eirexe123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["wincrypt"] }
kernel32-sys = "*"
win32-error = "0.9.0"
clap = "2.33.3"
sha-1 = "0.9.6"
anyhow = "1.0.40"